--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
             <div class="mt-5 mb-5">
                 <h1 class="fs-2 text-center fw-bold">Our Brand Partner</h1>
             </div>
-            <div class="col-lg-4 mt-5 mt-lg-1 d-lg-flexjustify-content-center">
-                <img class="w-100 mb-5 mt-5" src="images/our-partner.png" alt="">
+            <div class="mt-5 mt-lg-1">
+                <img class="center mb-5 mt-5" src="images/our-partner.png" alt="">
             </div>
         </section>
 
