--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda CBR</title>
+    <link rel="apple-touch-icon" type="image/png" href="https://www.rupom.live/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.rupom.live/images/favicon.png">
 
     <!--Bootstrap CSS only -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!--CDN <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+<!--     <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
@@ -382,10 +384,10 @@
     </section>
 </footer>
 <!-- Bootstrap Java Script -->
-<script src="/js/bootstrap.bundle.min.js"></script>
+<!-- <script src="/js/bootstrap.bundle.min.js"></script> -->
 <!-- JavaScript Bundle with Popper -->
-<!--CDN <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script>
 
 </html>
