--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <h1 class="fs-2 text-center fw-bold">Our Brand Partner</h1>
             </div>
             <div class="mt-5 mt-lg-1">
-                <img class="center-first" src="images/our-partner.png" alt="">
+                <img class="d-block w-50 ms-auto me-auto" src="images/our-partner.png" alt="">
             </div>
         </section>
 
